[package]
name = "dh"
version = "0.1.0"
authors = ["workingj <workingj@outlook.de>"]
edition = "2018"

[dependencies]
termcolor = "1.0.5"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
